# intrada

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .graphifyignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  Gemfile  README.md  SETUP.md  Shuttle.toml  VISION.md  _typos.toml  codecov.yml  deny.toml  fly.toml  justfile  mise.toml  worker.js  wrangler.toml
.cargo/: audit.toml
.claude/: settings.json
.config/: nextest.toml
crates/intrada-api/: Cargo.toml  build.rs
crates/intrada-api/migrations/: 001_create_pieces.sql  002_create_exercises.sql  003_create_sessions.sql
crates/intrada-api/src/: auth.rs  clerk.rs  error.rs  lib.rs  main.rs  migrations.rs  rate_limit.rs  state.rs  storage.rs  telemetry.rs
crates/intrada-api/src/db/: account.rs  audit.rs  exercises.rs  goals.rs  items.rs  lessons.rs  mod.rs  oauth.rs  pieces.rs  routines.rs  sessions.rs  sets.rs  tokens.rs
crates/intrada-api/src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs  tools.rs
crates/intrada-api/src/routes/: account.rs  assets.rs  auth_ios.rs  exercises.rs  features.rs  goals.rs  health.rs  items.rs  lessons.rs  mod.rs  oauth.rs  pieces.rs  routines.rs  sessions.rs  sets.rs  tokens.rs
crates/intrada-api/src/services/: account.rs  audit.rs  goals.rs  items.rs  lessons.rs  mod.rs  oauth.rs  sessions.rs  sets.rs  tokens.rs
crates/intrada-api/tests/: account_test.rs  auth_ios_test.rs  auth_test.rs  cors_test.rs  exercises_test.rs  features_test.rs  goals_test.rs  health_test.rs  items_test.rs  mcp_test.rs  migrations_test.rs  oauth_test.rs  pieces_test.rs  rate_limit_test.rs  routines_test.rs  sessions_test.rs  sets_test.rs  tokens_test.rs
crates/intrada-api/tests/common/: mod.rs
crates/intrada-cli/: Cargo.toml
crates/intrada-cli/src/: display.rs  main.rs  shell.rs  storage.rs
crates/intrada-cli/src/commands/: mod.rs
crates/intrada-core/: Cargo.toml
crates/intrada-core/src/: analytics.rs  app.rs  error.rs  http.rs  lib.rs  model.rs  persistence.rs  validation.rs
crates/intrada-core/src/domain/: account.rs  chart.rs  exercise.rs  features.rs  goal.rs  item.rs  lesson.rs  mcp_audit.rs  mcp_tokens.rs  mod.rs  oauth.rs  piece.rs  routine.rs  session.rs  set.rs  types.rs  variant.rs
crates/intrada-core/tests/: typegen_readiness.rs
crates/intrada-ffi/: Cargo.toml
crates/intrada-ffi/src/: ffi.rs  lib.rs
crates/intrada-mobile/plugins/auth-session/: Cargo.toml  build.rs
crates/intrada-mobile/plugins/auth-session/ios/: Package.swift
crates/intrada-mobile/plugins/auth-session/ios/Sources/AuthSessionPlugin/: AuthSessionPlugin.swift
crates/intrada-mobile/plugins/auth-session/permissions/: default.json
crates/intrada-mobile/plugins/auth-session/permissions/autogenerated/: reference.md
crates/intrada-mobile/plugins/auth-session/permissions/schemas/: schema.json
crates/intrada-mobile/plugins/auth-session/src/: lib.rs  mobile.rs
crates/intrada-mobile/plugins/background-audio/: Cargo.toml  build.rs
crates/intrada-mobile/plugins/background-audio/ios/: Package.swift
crates/intrada-mobile/plugins/background-audio/permissions/: default.json
crates/intrada-mobile/plugins/background-audio/permissions/autogenerated/: reference.md
crates/intrada-mobile/plugins/background-audio/permissions/schemas/: schema.json
crates/intrada-mobile/plugins/background-audio/src/: lib.rs  mobile.rs
crates/intrada-mobile/plugins/live-activity/: Cargo.toml  build.rs
crates/intrada-mobile/plugins/live-activity/ios/: Package.swift
crates/intrada-mobile/plugins/live-activity/permissions/: default.json
crates/intrada-mobile/plugins/live-activity/permissions/autogenerated/: reference.md
crates/intrada-mobile/plugins/live-activity/permissions/schemas/: schema.json
crates/intrada-mobile/plugins/live-activity/src/: lib.rs  mobile.rs
crates/intrada-mobile/src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json  tauri.ios.conf.json
crates/intrada-mobile/src-tauri/capabilities/: default.json  mobile.json
crates/intrada-mobile/src-tauri/src/: lib.rs
crates/intrada-web/: Cargo.toml  Trunk.toml  build.rs  index.html  input.css
crates/intrada-web/src/: api_client.rs  app.rs  background_audio.rs  clerk_bindings.rs  core_bridge.rs  data.rs  haptics.rs  helpers.rs  js_bridge.rs  lib.rs  live_activity.rs  main.rs  platform.rs  session_lifecycle.rs  types.rs  validation.rs
crates/intrada-web/src/components/: accent_row.rs  app_footer.rs  app_header.rs  autocomplete.rs  back_link.rs  bottom_sheet.rs  bottom_tab_bar.rs  brand_mark.rs  builder_item_row.rs  button.rs  card.rs  card_title.rs  circular_button.rs  context_menu.rs  detail_group.rs  drag_handle.rs  drop_indicator.rs  empty_state.rs  entry_list_editor.rs  error_banner.rs  feature_gate.rs  field_label.rs  form_field_error.rs  grouped_list.rs  icon.rs  inline_type_indicator.rs  item_reflection_sheet.rs  library_filter_tabs.rs  library_item_card.rs  library_list_row.rs  library_set_card.rs  library_type_tabs.rs  line_chart.rs  mod.rs  page_add_button.rs  page_heading.rs  practice_timer.rs  profile_button.rs  progress_ring.rs  pull_to_refresh.rs  (+32 more)
crates/intrada-web/src/hooks/: mod.rs  use_drag_reorder.rs
crates/intrada-web/src/views/: account_delete.rs  add_exercise.rs  add_form.rs  add_piece.rs  analytics.rs  design_catalogue.rs  detail.rs  edit_exercise.rs  edit_form.rs  edit_piece.rs  goal_detail.rs  goal_edit_form.rs  goal_form.rs  goals.rs  goals_list.rs  library_list.rs  library_split.rs  login.rs  mcp_audit.rs  mcp_tokens.rs  mod.rs  not_found.rs  oauth_consent.rs  routine_edit.rs  routines.rs  session_active.rs  session_new.rs  session_summary.rs  sessions.rs  sessions_all.rs  set_detail.rs  set_edit.rs  sets.rs  settings.rs  sso_callback.rs  welcome.rs
crates/intrada-web/static/: ios-auth.html  robots.txt  sitemap.xml  splashscreen.html
crates/intrada-web/static/clerk/: clerk.browser.js
crates/intrada-web/static/sentry/: bundle.tracing.min.js
crates/intrada-web/tests/: wasm.rs
crates/shared/: Cargo.toml
crates/shared/src/: core.rs  json_bridge.rs  lib.rs
(+636 files in other folders)
