[workspace]
# Active build = the native iOS stack (core + ffi) and the API. The Leptos web
# shell and the Tauri shell were removed (see docs/rebuild-review.md); the
# native SwiftUI app on the Crux core is the only shell going forward.
members = [
  "crates/intrada-core",
  "crates/intrada-ffi",
  "crates/intrada-api",
]
resolver = "2"
package.rust-version = "1.75"

[workspace.dependencies]
crux_core = "0.19.0"
crux_http = "0.19.0" # tracks crux_core: crux_http 0.18 requires crux_core ^0.19
# Must track the facet version crux_core 0.19 pulls in (0.44.x) so the
# gated `derive(facet::Facet)` impls match crux's typegen reflection.
facet = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# jsonwebtoken v10.3.0 has a bug (#489): Header.extras is
# HashMap<String, String> with #[serde(flatten)], so non-string header
# fields (like Clerk's `oiat: <number>`) fail deserialization. PR #496
# fixes this by changing extras to HashMap<String, serde_json::Value>.
# Remove this patch once the fix lands in a released version.
[patch.crates-io]
jsonwebtoken = { git = "https://github.com/kp-timo-beyel/jsonwebtoken.git", branch = "fix/header-extras-non-string-values" }

[profile.dev.package."*"]
debug = false

[profile.dev]
debug = "line-tables-only"
