[package]
name = "intrada-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
name = "intrada_api"
path = "src/lib.rs"

[[bin]]
name = "intrada-api"
path = "src/main.rs"

[dependencies]
intrada-core = { path = "../intrada-core" }

axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
libsql = { version = "0.9", default-features = false, features = ["remote", "core"] }
libsql_migration = { version = "0.2", features = ["content"] }

serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rsa = "0.9"
rand = "0.9"
