[package]
name = "intrada-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
name = "intrada_api"
path = "src/lib.rs"

[[bin]]
name = "intrada-api"
path = "src/main.rs"

[dependencies]
intrada-core = { path = "../intrada-core" }

axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
libsql = { version = "0.9", default-features = false, features = ["remote", "core"] }
libsql_migration = { version = "0.2", features = ["content"] }

serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }

# MCP Personal Access Tokens: cryptographically secure RNG for token bytes,
# SHA-256 for at-rest hashing.
rand = "0.8"
sha2 = "0.10"

# OAuth 2.1: PKCE S256 verification (base64url-no-pad of the SHA-256 of
# the code_verifier). `URL_SAFE_NO_PAD` matches RFC 7636 Section 4.2.
base64 = "0.22"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Sentry: server-side error reporting + APM. Init from SENTRY_DSN env var.
# rustls (not native-tls) to match the rest of the API stack.
sentry = { version = "0.48", default-features = false, features = ["backtrace", "contexts", "panic", "tracing", "tower-axum-matched-path", "reqwest", "rustls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rsa = "0.9"
