[package]
name = "intrada-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intrada"
path = "src/main.rs"

[dependencies]
intrada-core = { path = "../intrada-core" }
crux_core = { workspace = true }
rusqlite = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
