[package]
name = "intrada-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_repr = "0.1"
