[package]
name = "intrada-core"
version = "0.1.0"
edition = "2021"
publish = false
rust-version.workspace = true

[features]
# Enables facet reflection on the FFI-boundary types so the native iOS
# bridge's typegen (crux_core::type_generation::facet) can emit Swift types.
# Gated so the default web/api builds are unaffected.
facet_typegen = ["dep:facet", "crux_core/facet_typegen", "crux_http/facet_typegen"]

[dependencies]
crux_core = { workspace = true }
crux_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
# `chrono` feature provides the Facet impl for the `DateTime<Utc>` fields on
# domain types (created_at/updated_at) so they're typegen-representable.
facet = { workspace = true, optional = true, features = ["chrono"] }
