[package]
name = "intrada-ffi"
version = "0.1.0"
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[[bin]]
name = "codegen"
required-features = ["codegen"]

[features]
# Generate Swift types from the core (used by the `codegen` bin). Pulls facet
# reflection into intrada-core + crux_core.
facet_typegen = ["intrada-core/facet_typegen", "crux_core/facet_typegen"]
# Expose the bridge to Swift via UniFFI.
uniffi = ["dep:uniffi"]
# The typegen binary.
codegen = ["dep:anyhow", "dep:clap", "dep:pretty_env_logger", "facet_typegen"]

[dependencies]
crux_core = { workspace = true }
intrada-core = { path = "../intrada-core" }
thiserror = { workspace = true }

# UniFFI pinned to match the version cargo-swift's bundled bindgen expects;
# lib.rs asserts compatibility at compile time. (See crux `counter` example.)
uniffi = { version = "=0.31.1", optional = true }

# codegen-only
anyhow = { version = "1", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
pretty_env_logger = { version = "0.5", optional = true }

[dev-dependencies]
crux_core = { workspace = true, features = ["testing"] }
