[package]
name = "intrada-web"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
intrada-core = { path = "../intrada-core" }
crux_core = { workspace = true }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
chrono = { workspace = true }
ulid = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
send_wrapper = "0.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.7", features = ["http", "json"] }
gloo-timers = { version = "0.4", features = ["futures"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "ClipboardEvent", "DataTransfer", "PointerEvent", "Element", "DomRect", "HtmlElement", "TouchEvent", "Touch", "TouchList", "AddEventListenerOptions"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
