[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "shared"

[[bin]]
name = "codegen"
required-features = ["codegen"]

[[bin]]
name = "uniffi-bindgen"
required-features = ["uniffi-bindgen"]

[features]
typegen = ["crux_core/typegen", "intrada-core/typegen"]
facet_typegen = ["crux_core/facet_typegen", "intrada-core/facet_typegen"]
uniffi = ["dep:uniffi"]
uniffi-bindgen = ["uniffi", "uniffi/cli"]
codegen = [
    "crux_core/cli",
    "dep:anyhow",
    "dep:clap",
    "dep:log",
    "dep:pretty_env_logger",
    "uniffi",
    "typegen",
]

[dependencies]
crux_core = { workspace = true }
intrada-core = { path = "../intrada-core" }
serde = { workspace = true }
serde_json = "1"

# Optional: UniFFI for iOS/Android FFI (cli feature added by uniffi-bindgen)
uniffi = { version = "=0.31.0", optional = true }

# Optional: codegen CLI deps
anyhow = { version = "1", optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }
log = { version = "0.4", optional = true }
pretty_env_logger = { version = "0.5", optional = true }
