[package]
name = "intrada-mobile"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# Tauri requires both staticlib (iOS) and cdylib (desktop) targets.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-haptics = "2"
tauri-plugin-deep-link = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
