[package]
name = "intrada-mobile"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# Tauri requires both staticlib (iOS) and cdylib (desktop) targets.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-haptics = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-background-audio = { path = "../plugins/background-audio" }
serde = { workspace = true }
serde_json = { workspace = true }

# Sentry: Rust-side panics in the Tauri host. WebView errors are captured
# separately by the browser SDK loaded in intrada-web/index.html.
# DSN is baked at compile time via SENTRY_DSN_MOBILE — unset = no init.
sentry = { version = "0.48", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
