[package]
name = "tauri-plugin-background-audio"
version = "0.0.1"
edition = "2021"
rust-version.workspace = true
description = "Intrada-internal Tauri plugin: keeps the practice timer running while the app is backgrounded / the device is locked. Bridges to Swift on iOS for AVAudioSession + lock-screen Now Playing."
# Required by tauri-plugin's build script (must match package.name).
links = "tauri-plugin-background-audio"

[dependencies]
tauri = { version = "2" }
serde = { workspace = true }
thiserror = { workspace = true }

# iOS-only: sentry + serde_json. Used inside `#[cfg(target_os = "ios")]`
# helpers to drop breadcrumbs / capture bridge errors against the host's
# already-initialised Sentry hub (intrada-mobile/src-tauri/src/lib.rs).
# Default sentry features off — the host owns transport (reqwest/rustls);
# we only need the core API surface.
[target.'cfg(target_os = "ios")'.dependencies]
serde_json = { workspace = true }
sentry = { version = "0.48", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
