[package]
name = "tauri-plugin-live-activity"
version = "0.0.1"
edition = "2021"
rust-version.workspace = true
description = "Intrada-internal Tauri plugin: ActivityKit Live Activity for the active practice session — Lock Screen card + Dynamic Island compact / expanded views. iOS-only; layered alongside the background-audio plugin."
# Required by tauri-plugin's build script (must match package.name).
links = "tauri-plugin-live-activity"

[dependencies]
tauri = { version = "2" }
serde = { workspace = true }
thiserror = { workspace = true }

# iOS-only: sentry + serde_json. Used inside `#[cfg(target_os = "ios")]`
# helpers to drop breadcrumbs / capture bridge errors against the host's
# already-initialised Sentry hub (intrada-mobile/src-tauri/src/lib.rs).
# Mirrors the same pattern as the background-audio plugin.
[target.'cfg(target_os = "ios")'.dependencies]
serde_json = { workspace = true }
sentry = { version = "0.48", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

# Args struct round-trip tests (intrada#641) — verify the snake_case
# field names match what the JS bridge in intrada-web sends. Only
# runnable on macOS (`cargo test -p tauri-plugin-live-activity`)
# because the Linux CI runner can't link `tauri`'s GTK deps; see
# `.github/workflows/ci.yml`.
[dev-dependencies]
serde_json = { workspace = true }
